# video_to_sound

./: .gitignore  README.md  convert.py  convert_and_split.py  memo.txt  pyproject.toml
